# v-world-cli

./: .gitignore  Cargo.toml  log4rs.yaml
src/: main.rs
src/chat/: message.rs  mod.rs  plan_agent.rs  room.rs
src/dao/: mod.rs  profile_dao.rs  profile_yaml_dao.rs
src/llm/: mod.rs  openai.rs
src/model/: profile.rs
src/ui/: cli_ui.rs  mod.rs
